Add minimal attendance module
