# apps/api-erp/src/modules/students/students.dto.ts
@@ -36,6 +36,12 @@ export class CreateStudentBodyDto {
   lastName?: string | null;
 
   @ApiProperty()
+  className!: string;
+
+  @ApiProperty()
+  sectionName!: string;
+
+  @ApiProperty()
   campusId!: string;
 
   @ApiProperty({
@@ -54,6 +60,12 @@ export class UpdateStudentBodyDto {
 
   @ApiPropertyOptional({ nullable: true })
   lastName?: string | null;
+
+  @ApiProperty()
+  className!: string;
+
+  @ApiProperty()
+  sectionName!: string;
 
   @ApiProperty()
   campusId!: string;
@@ -108,6 +120,12 @@ export class StudentDto {
 
   @ApiPropertyOptional({ nullable: true })
   lastName!: string | null;
+
+  @ApiProperty()
+  className!: string;
+
+  @ApiProperty()
+  sectionName!: string;
 
   @ApiProperty()
   fullName!: string;
