# apps/api-erp/src/openapi.ts
@@ -19,6 +19,7 @@ export function createOpenApiDocument(app: INestApplication) {
     .addTag(API_DOCS.TAGS.ONBOARDING)
     .addTag(API_DOCS.TAGS.CAMPUSES)
     .addTag(API_DOCS.TAGS.ACADEMIC_YEARS)
+    .addTag(API_DOCS.TAGS.ATTENDANCE)
     .addTag(API_DOCS.TAGS.INSTITUTIONS)
     .build();
 
